# Pick-and-Place-Robot

install/: local_setup.sh  setup.sh
install/arm_gazebo/share/arm_gazebo/: package.sh
install/robotic_arm_sim/lib/robotic_arm_sim/: gripper_direct_control.py  gripper_teleop.py  test_gripper_simple.py
install/robotic_arm_sim/share/robotic_arm_sim/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robotic_arm_sim/share/robotic_arm_sim/urdf/: gripper.urdf
log/: latest_build
src/arm_gazebo/: CMakeLists.txt
src/arm_gazebo/launch/: spawn_objects.launch.py
src/robotic_arm_sim/: CMakeLists.txt  package.xml
src/robotic_arm_sim/config/moveit_config/: arm.srdf  controller.yaml
src/robotic_arm_sim/launch/: arm_gazebo.launch.py  moveit.launch.py
src/robotic_arm_sim/src/: arm_teleop.py  autonomous_pick_place.py  gripper_controller.py  pick_place_action.py  pick_place_controller.py  simple_gripper_test.py
src/robotic_arm_sim/urdf/: arm.urdf
