<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotic_arm_sim</name>
  <version>0.0.0</version>
  <description>Pick and place robotic arm simulation</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>rclcpp</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>